--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -6,7 +6,7 @@
 }
 
 #userFeed {
-    margin-left: 511px;
+    margin-left: calc(24.79vw + 32px);
     display: flex;
     flex-flow: column;
     gap: 32px;
