--- a/Views/styles/header.css
+++ b/Views/styles/header.css
@@ -1,10 +1,7 @@
 main {
-    margin: 128px;
+    margin-top: 128px;
     padding: 0 90px;
-    display: flex;
-    flex-flow: row nowrap;
-    gap: 102px;
-
+    width: 100%;
 }
 
 header {
