feat: animation like hover and display reaction

--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -112,3 +112,42 @@ input[type="file"] {
 .hide {
     display: none;
 }
+
+#likeButton:hover{
+    background-color: #7D7373;
+}
+
+.reactionCta{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 20vw;
+    height: 4vw;
+    border-radius: 50px;
+    background: #FFFF;
+    box-shadow:  5px 5px 10px #dedede;
+
+    animation: float 2s ease-out;
+}
+@keyframes float{
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(-10px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+.reactionCta>input{
+    width: 2vw;
+}
+.reactionCta>input:hover{
+    transition: ease-in;
+}
+
+.hideCta{
+    display: none;
+}
