--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -123,8 +123,7 @@ input[type="file"] {
     border-radius: 50px;
     background: #FFFF;
     box-shadow:  5px 5px 10px #dedede;
-
-    animation: float 1s ease-out;
+    animation: float 1.5s ease-out;
 }
 @keyframes float{
     0%{
@@ -142,7 +141,8 @@ input[type="file"] {
     width: 2vw;
 }
 .reactionCta>input:hover{
-    transition: ease-in;
+    transform: scale(1.1);
+
 }
 
 .hideCta{
