--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -11,6 +11,7 @@
     flex-flow: column;
     gap: 32px;
     align-items: center;
+    justify-content: flex-start;
 }
 
 body {
@@ -140,10 +141,8 @@ input[type="file"] {
 .reactionCta>button{
     width: 2vw;
     border: none;
-    padding: none;
-    color: none;
+    padding: 0;
     background: none;
-
 }
 .reactionCta>button:hover{
     transform: scale(1.1);
