--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -190,22 +190,24 @@ input[type="file"] {
     color: #7D7373;
     cursor: pointer;
 }
+.reactionList{
+    width: 14vw;
+    border-radius: 50px;
+    background: #FFFF;
+    box-shadow:  5px 5px 10px #dedede;
 
+}
 .reactionContent{
-    width: 16vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
 
     font-size: 1rem;
-    padding: 5%;
+    padding: 4%;
 
     border: none;
 
-    border-radius: 50px;
-    background: #FFFF;
-    box-shadow:  5px 5px 10px #dedede;
-
+   
     color: #000000;
 
 }
