--- a/Views/styles/header.css
+++ b/Views/styles/header.css
@@ -35,6 +35,7 @@ header h1 {
     background-color: inherit;
     outline: none;
     border: none;
+    width: 100%;
     font-size: 24px;
     font-weight: 300;
 }
