--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -68,6 +68,7 @@ body {
     justify-content: center;
     gap: 8px;
 }
+
 #actionMsg {
     font-weight: 500;
 }
@@ -110,11 +111,12 @@ input[type="file"] {
     overflow: hidden;
     white-space: nowrap;
 }
+
 .hide {
     display: none;
 }
 
-.reactionCta{
+.reactionCta {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -122,56 +124,63 @@ input[type="file"] {
     height: 4vw;
     border-radius: 50px;
     background: #FFFF;
-    box-shadow:  5px 5px 10px #dedede;
+    box-shadow: 5px 5px 10px #dedede;
     animation: float 1.5s ease-out;
 }
-@keyframes float{
-    0%{
+
+@keyframes float {
+    0% {
         transform: translateY(0px);
     }
-    50%{
+
+    50% {
         transform: translateY(-5px);
     }
-    100%{
+
+    100% {
         transform: translateY(0px);
     }
 }
 
-.reactionCta>button{
+.reactionCta>button {
     width: 2vw;
     border: none;
     padding: 0;
     background: none;
 }
-.reactionCta>button:hover{
+
+.reactionCta>button:hover {
     transform: scale(1.1);
 
 }
 
-.hideCta{
+.hideCta {
     display: none !important;
 }
-.commentForm{
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  gap: 2%
+
+.commentForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    gap: 2%
 }
-.commentContent{
+
+.commentContent {
     min-width: 10vw;
     min-height: 2vw;
 
     border-color: #2B2626;
     border-radius: 30px;
     border: solid 1px;
-    
+
     padding: 0.5vw;
 
-    resize:none;
+    resize: none;
 
 }
-.postComment{
+
+.postComment {
     background-color: #39E168;
     border-radius: 50px;
     border: none;
@@ -180,7 +189,7 @@ input[type="file"] {
     cursor: pointer
 }
 
-.reactionButton{
+.reactionButton {
     border: none;
     padding: 0;
     color: none;
@@ -189,14 +198,16 @@ input[type="file"] {
     color: #7D7373;
     cursor: pointer;
 }
-.reactionList{
+
+.reactionList {
     width: 14vw;
-    border-radius: 50px;
+    border-radius: 2vw;
     background: #FFFF;
-    box-shadow:  5px 5px 10px #dedede;
+    box-shadow: 5px 5px 10px #dedede;
 
 }
-.reactionContent{
+
+.reactionContent {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -206,11 +217,11 @@ input[type="file"] {
 
     border: none;
 
-   
+
     color: #000000;
 
 }
 
-.reactionEmoji{
+.reactionEmoji {
     width: 2vw;
 }
