--- a/Views/styles/pages.css
+++ b/Views/styles/pages.css
@@ -48,3 +48,19 @@ body {
     text-decoration: underline;
 }
 
+
+
+.headerPage {
+    display: flex;
+    flex-flow: column;
+    gap: 16px;
+    align-items: center;
+    padding: 16px 32px;
+    width: 100%;
+    border-radius: 25px;
+    background-color: #F5FDF4;
+}
+
+.headerPage img {
+    border-radius: 100px;
+}
