--- a/Views/styles/pages.css
+++ b/Views/styles/pages.css
@@ -49,7 +49,6 @@ body {
 }
 
 
-
 .headerPage {
     display: flex;
     flex-flow: column;
@@ -59,6 +58,12 @@ body {
     width: 100%;
     border-radius: 25px;
     background-color: #F5FDF4;
+}
+.headerPage > span {
+    color: #7D7373;
+}
+.headerPage p + p {
+    font-weight: 500;
 }
 
 .headerPage img {
