--- a/Views/styles/pages.css
+++ b/Views/styles/pages.css
@@ -104,6 +104,10 @@ body {
     height: 64px;
 }
 
+#postCards > div {
+    width: 100%;
+}
+
 
 #actionMsg {
     font-weight: 500;
@@ -136,3 +140,7 @@ button[name="postPost"]:hover,
 input[type="file"] {
     display: none;
 }
+#postCards button[name="deletePost"] {
+    padding: 16px;
+}
+
