--- a/Views/styles/userOptions.css
+++ b/Views/styles/userOptions.css
@@ -1,10 +1,108 @@
+/* HEADER */
+
+header {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+header h1 {
+    width: 5%;
+    height: 100%;
+}
+
+header h2 {
+    align-self: center;
+}
+
+header h1 .logo {
+    width: 100%;
+    height: 100%;
+}
+
+/* NAV */
+
+nav {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    background: #3AE168;
+    color: white;
+    padding: 15px 10px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    cursor: pointer;
+}
+
+/* FORM */
+
+.user-options {
+    margin: 40px 20%;
+}
+
 .user-info {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
 
+.user-info label {
+    margin: 0 5px;
+}
+
 .user-info input {
-    width: 20%;
     margin: 15px 5px;
+    border-radius: 4px;
+    border: 1px solid var(--balck);
+    padding: 12px;
+}
+
+.mediaInput {
+    display: flex;
+    flex-direction: column;
+}
+
+.mediaInput img {
+    width: 30%;
+    padding-top: 15px;
+}
+
+.mediaInputBanner {
+    display: flex;
+    flex-direction: column;
+}
+
+.mediaInputBanner img {
+    width: 80%;
+    padding-top: 15px;
+}
+
+#profile_picture, #profile_banner {
+    width: 35%;
+    background-color: #3AE168;
+    border: #3AE168;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    color: var(--white);
+}
+
+.user-info .validate {
+    width: 20%;
+    color: var(--white);
+    background-color: #3AE168;
+    font-weight: 700;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    cursor: pointer;
+    outline: none;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    border: #3AE168;
 }
